# PrimerTK

./: .gitignore  .travis.yml  README.md  ReadMeCWL.md  ReadMeSV.md  ReadMeStandard.md  cluster_install.sh  ispcr.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml  tox.ini
cwl/: PrimerMultiplex.cwl  PrimerMultiplexSNPs.cwl  PrimerSV.cwl  PrimerSV_SNP.cwl  PrimerStandard.cwl  PrimerStandardSNPs.cwl
cwl/tools/: combine_pcr_output.cwl  genome_iterator.cwl  genome_iterator_sv.cwl  is_pcr.cwl  multiplex_pcr_gen.cwl  pcr_gen.cwl  pcr_gen_sv.cwl  pcr_setup.cwl  pcr_sim.cwl  post_pcr_analysis.cwl  post_pcr_analysis_sv.cwl  primer3.cwl  primer_tabix.cwl  standard_pcr_gen.cwl
docs/: cwl.md  index.md  inputs.md  installation.md  introduction.md  standard_and_multiplex.md  structural_variants.md
genomeSV/CWL_Pipelines/: PrimerSV_SNP.cwl  PrimerSV_SNP.cwl~  deletion.yml  deletion_snp.yml  deletion_snp.yml~  inversion.yml
genomeSV/expected_outputs/: primer3_input.20190307-134847.txt  primer_dump.txt  standard_pcr.txt  top_ranked_final_primers.csv  total_list_gc.csv
genomeSV/input_tests/: input1.txt  input2.csv
genomeSV/src/: genome_iterator_sv.py  main_post_pcr.py  main_pre_pcr.py  primer_tabix.py~
genomeSV/tests/: .coverage  (+1 more)
primer_tk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: commented_installer.sh  installer.sh  ispcr.sh  primer_tk
src/: genome_iterator.py  genome_iterator_sv.py  genome_iterator_sv.py~  main_post_pcr_sv.py  mp_class.py  primer_cross_hyb.py  primer_tabix.py
test/: .coverage  run_test.sh  test_genome.py
tests/: test_genome.py
(+240 files in other folders)
