[metadata]
name = primertk
description = Your all in one toolkit for DNA primer generation
author = Dennis Kennetz
license = Apache2.0
license_files = 
    LICENSE
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    primertk
install_requires =
    pandas>=1.1.0
    numpy>=1.19.5
    biopython>=1.72
python_requires = >= 3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.0.1
    pytest-cov>=4.0.0

[options.package_data]
primertk = py.typed


